# penguinarium

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  pytest.ini
backend/app/app/: settings.py
backend/src/api/: admin.py  auth.py  exceptions.py  logging.py  middleware.py  pagination.py  permissions.py  tests.py  urls.py  urls_v1.py
backend/src/api/migrations/: 0001_initial.py  0002_rename_api_key_key_idx_api_apikey_key_5dc959_idx.py
backend/src/api/models/: api_key.py
backend/src/api/serializers/: dagster.py  data_source.py  statistics.py  v1.py
backend/src/api/tests/: __init__.py  test_api_misc.py  test_data_source_api.py  test_statistics_api.py  (+1 more)
backend/src/common/: models.py
backend/src/config/: settings.py  settings_test.py  urls.py
backend/src/dagster/: apps.py  service.py  tests.py  urls.py  views.py
backend/src/dagster_support/: __init__.py  client.py  tests.py
backend/src/pulling/: admin.py
dagster_app/: .dockerignore  .gitignore  Dockerfile  README.md  dagster.yaml  pyproject.toml  pytest.ini
dagster_app/dagster_app/: __init__.py
dagster_app/dagster_app/jobs/: llm.py  metadata.py  statistics.py
dagster_app/dagster_app/ops/: __init__.py  dataset.py
dagster_app/dagster_app/utils/: alerts.py  dataset.py  metadata.py  persistence.py  statistics.py
dagster_app/dagster_home/: dagster.yaml
dagster_app/data/home_credit/: application_train.csv  bureau.csv
dagster_app/run_configs/: agentic.demo.yaml  ai.snowflake.yaml  static.postgres.yaml
dagster_app/src/dq_platform/: __init__.py  definitions.py
dagster_app/tests/: test_connectors.py  test_dagster_config.py  test_llm_alert_generation.py  test_llm_resource.py  test_ops.py  test_statistics_checks.py
(+57 files in other folders)
