[project]
name = "dagster-app"
version = "0.1.0"
description = "Dagster pipelines for Home Credit Default Risk metadata and statistics extraction"
requires-python = ">=3.10"
authors = [{ name = "Penguinarium" }]
dependencies = [
    "dagster>=1.5,<1.7",
    "dagster-webserver>=1.5,<1.7",
    "dagster-postgres>=0.22,<0.23",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "snowflake-sqlalchemy>=1.7.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "dagster_app"
